--- a/src/java/overview.html
+++ b/src/java/overview.html
@@ -3,7 +3,7 @@
    <title>Apache Nutch</title>
 </head>
 <body>
-<p>Apache Nutch is an open source web-search software project. </p>
-<p>Nutch is a project of the Apache Software Foundation and is part of the larger Apache community of developers and users.</p>
+<p>Apache Nutch is an open source web-search software project which is written in java </p>
+<p>Nutch is a project(since 2004) of the Apache Software Foundation and is part of the larger Apache community of developers and users.</p>
 </body>
 </html>
